@@ -22,6 +22,7 @@
     * Fix Unicode/Ansi conversion problem in SQLGetDiagFieldW.c
     * Add support for Driver64 in SQLDriverConnectW
     * Add missing unicode setting when returning a connection to the pool
+    * Tidy up leaking iconv handles if connect_part_one fails
 
 26th-November-2011
 2.3.1
